# DisasterSight

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  Makefile  README.md  config.yaml  pyproject.toml  requirements.txt
.cursor/: hooks.json
.cursor/hooks/: lint-fix.py
.cursor/rules/: cached-inference.mdc  config-safety.mdc  data-pipeline.mdc  python-ml.mdc  scope-guard.mdc  testing.mdc
.github/workflows/: ci.yml
.streamlit/: config.toml
data/: README.md
docs/: artifacts_integration.md  dashboard_git_workflow.md  design_system.md  foundation_guardrails.md  implementation_plan.md  interface_contracts.md  model_improvement_plan.md  stitch_dashboard_ui_prompt.md
notebooks/: 02_crop_extraction.ipynb
src/: __init__.py
src/common/: AGENTS.md  __init__.py  classification_metrics.py  constants.py  metrics_format.py  paths.py  priority_score.py
src/dashboard/: __init__.py  app.py  artifact_resolver.py  config.py  data_loaders.py  labels.py  navigation.py  overlays.py  priority.py  sidebar_state.py  styles.py  theme.css
src/dashboard/components/: __init__.py  (+14 more)
src/data/: AGENTS.md  __init__.py  build_crop_manifest.py  build_crop_qa_preview.py  build_scene_manifest.py  crop_extraction.py  find_wildfire_events.py  manifests.py  preview_xbd_scene.py  summarise_wildfire_labels.py  validate_crop_manifest.py  xbd.py
src/inference/: AGENTS.md  __init__.py  generate_predictions.py  prediction_cache.py
src/models/: AGENTS.md  classifier.py  crop_dataset.py  evaluate.py  train.py
tests/: test_dashboard.py  test_inference.py  test_models.py  test_xbd.py
(+24 files in other folders)
