[project]
name = "disastersight"
version = "0.1.0"
description = "AI-assisted satellite damage triage using xBD/xView2 imagery"
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
    "artifacts",
    "data/cache",
    "data/interim",
    "data/processed",
    "data/raw",
    "outputs",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "artifacts/",
    "data/",
    "outputs/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["*Tests", "Test*"]
python_functions = ["test_*"]
